--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    /* margin: 20px; */
+    margin-bottom: 20px;
     gap: 15px;
     width: 700px;
 }
